--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <p>
       At Veleda Security, we believe in a personalized, hands-on approach to cybersecurity.
-      Our team is distributed across the United States, with primary offices in New York
-      and Boston, yet we support organizations on a global scale. We engineer solutions
+      Our team is distributed across the United States, with primary offices in Romania
+      and US, yet we support organizations on a global scale. We engineer solutions
       that match your unique environment and risk profile. Whether it's maturing
       application security or configuring end-to-end visibility, our aim is to help
       organizations adopt the best technical and governance practices.
@@ -93,7 +93,7 @@
         We also design governance programs to ensure that security tools and methods
         stay relevant over time. Our methodology emphasizes developer enablement,
         leadership engagement, and tangible results. We’ve helped clients integrate
-        SAST, SCA, and secrets detection tools (like Snyk and Trufflehog) into CI/CD
+        SAST, SCA, and secrets detection tools into CI/CD
         pipelines, and we've guided them in adopting frameworks such as NIST SSDF
         and OWASP best practices.
       </p>
@@ -122,8 +122,7 @@
         that ensure security insights reach both developers and senior leadership.
         This includes mapping to compliance standards and frameworks.</p>
 
-      <p><strong>Identity & Access Campaigns:</strong> We run certification campaigns
-        using platforms like SailPoint IdentityNow to ensure continuous, least-privilege
+      <p><strong>Identity & Access Management:</strong> We run audits to ensure continuous, least-privilege
         access across the organization.</p>
 
       <p><strong>24/7 SOC & Monitoring:</strong> Our Security Operations approach
