--- a/index.html
+++ b/index.html
@@ -151,6 +151,71 @@
 
     <hr />
 
+<section id="cloud-security">
+  <h2>Cloud Security</h2>
+  <p>
+    At Veleda Security, we treat your cloud environment as a strategic asset. We align
+    identity, networking, encryption, monitoring, and vulnerability management into
+    a framework that reflects well-known standards. Our goal is a secure, flexible,
+    and auditable foundation.
+  </p>
+  <p>
+    We start by capturing your administrative policies. These might include “encrypt
+    all data at rest” or “restrict public network access.” We then transform them into
+    real guardrails through policy enforcement layers. Your vision becomes tangible,
+    automated controls.
+  </p>
+  <p>
+    We enforce these rules at build-time through infrastructure-as-code scanning. If
+    a pipeline tries to deploy a public IP or skip encryption, it gets flagged and
+    halted immediately. This early interception prevents high-risk misconfigurations.
+  </p>
+  <p>
+    At run-time, we augment built-in policy enforcement with external posture management
+    tools. This approach monitors your cloud for any drift from your standards. If the
+    environment deviates, we detect and alert in real time, preserving consistency.
+  </p>
+  <p>
+    Our guardrails ensure continuous compliance. They enforce region usage, encryption
+    key requirements, and no-public-IP rules. If a service or tool lacks certain
+    controls, we help you handle the risk or find an alternative. The standard never
+    drops.
+  </p>
+  <p>
+    We hold a zero trust stance for all cloud integrations. If a partner or third-party
+    solution cannot meet multi-factor authentication or encryption mandates, we work
+    with you to decide on the best path forward. Security must be uniform across the
+    entire ecosystem.
+  </p>
+  <p>
+    We integrate logs and telemetry into your preferred analytics platform, so your SOC
+    can correlate events and detect anomalies. We also layer in automated scanning
+    features for immediate insights. Our aim is clarity, not clutter.
+  </p>
+  <p>
+    We define roles and responsibilities from day one. Architecture teams set standards.
+    Security engineers implement policies. The SOC monitors, responds, and fine-tunes
+    defenses. This synergy keeps processes realistic and effective.
+  </p>
+  <p>
+    Our architecture evolves as your cloud environment does. Whenever a new service or
+    feature arises, we validate it against encryption, logging, and posture management
+    expectations. We incorporate it only if it meets your established baseline.
+  </p>
+  <p>
+    We also provide runtime security and container protection. Our advanced posture
+    management approach covers serverless and traditional workloads alike. In this
+    way, you maintain end-to-end visibility as you scale.
+  </p>
+  <p>
+    With Veleda Security, you get a boutique partner who understands the intricacies
+    of cloud security. We fuse best practices, continuous compliance, and operational
+    ease so you can focus on growth—knowing your foundation is secure.
+  </p>
+</section>
+
+    <hr />
+    
     <section id="contact">
       <h2>Contact Us</h2>
       <p>Ready to strengthen your security posture? Let’s talk about code-to-cloud
